# ServingBench-Tuner

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
configs/experiments/: quickstart.yaml
configs/quality/: enterprise_gate.json  quickstart.yaml
configs/tuner/: quickstart_nsga2.yaml
configs/workload/: WORKLOAD_PROFILES.md  agent_like.yaml  long_gen.yaml  quickstart_cpu.yaml  short_qa.yaml
data/eval_pack/: quickstart_eval.jsonl
data/workloads/: agent_like_len_output.json  agent_like_len_prompt.json  agent_like_profile.md  agent_like_trace.jsonl  long_gen_len_output.json  long_gen_len_prompt.json  long_gen_profile.md  long_gen_trace.jsonl  quickstart_len_output.json  quickstart_len_prompt.json  quickstart_profile.md  quickstart_trace.jsonl  short_qa_len_output.json  short_qa_len_prompt.json  short_qa_profile.md  short_qa_trace.jsonl
scripts/: check_quality_breakdown_gate.py  check_regression_gate.py  enterprise_rerank_agent_like.py  export_env_signature.py  gen_tests.sh  generate_capacity_plan.py  inspect_formal_comparison.py  make_public_workload.py  postprocess_formal_comparison.py  quickstart_cpu.sh  run_formal_comparison.py  run_formal_comparison_stability.py  run_real_backend_validation.py  run_top_tier_pipeline.sh  start_vllm_server.sh
src/servingbench_tuner/: cli.py
src/servingbench_tuner/backends/: base.py  local_cpu.py  mock_backend.py  vllm_openai.py
src/servingbench_tuner/client/: pacing.py  protocol.py  runner.py  tracing.py
src/servingbench_tuner/core/: config.py  logging.py  reproducibility.py  types.py
src/servingbench_tuner/experiments/: regression.py  runner.py  store.py
src/servingbench_tuner/metrics/: analysis.py  e2e.py  engine_metrics.py  nvml.py  server.py
src/servingbench_tuner/planner/: capacity.py
src/servingbench_tuner/quality/: __init__.py  baseline.py  dataset.py  enterprise_gate.py  gate.py
src/servingbench_tuner/quality/evaluators/: base.py  code_unittest.py  exact_match.py  json_schema.py  llm_judge.py
src/servingbench_tuner/reporting/: plots.py  report.py
src/servingbench_tuner/reporting/templates/: report.html.j2  report.md.j2
src/servingbench_tuner/tuner/: constraints.py  nsga2.py  objectives.py  orchestrator.py  pareto.py  random_search.py  search_space.py
src/servingbench_tuner/workload/: arrival.py  dsl.py  length_dist.py  replay.py  schema.py  sessions.py
tests/: helpers.py  test_backends_base.py  test_backends_vllm_openai.py  test_client_runner.py  test_client_tracing.py  test_experiments_regression.py  test_workload_replay.py
